fix scrollbar issues

--- a/src/index.scss
+++ b/src/index.scss
@@ -40,26 +40,4 @@ html.theme-transitioning .card {
 
 html {
   overflow-y: scroll;
-
-  ::-webkit-scrollbar {
-    width: 10px;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-thumb);
-    border-radius: 5px;
-  }
-
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--scrollbar-thumb-hover);
-  }
-
-  ::-webkit-scrollbar-track {
-    border-left: none;
-    background-color: transparent;
-  }
-
-  ::-webkit-scrollbar-track-piece {
-    background-color: transparent;
-  }
 }
